2010-01-29  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR testsuite/41701
	* gcc.dg/builtins-58.c: Add -fno-ident to the options to prevent
	the string 'pow' in the pathname of the compiler from generating a
	test failure.

2010-01-29  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.old-deja/g++.mike/eh16.C: Rename err to e.
	* g++.old-deja/g++.mike/eh17.C: Likewise.
	* g++.old-deja/g++.mike/p5571.C: Likewise.

2010-01-29  Dodji Seketeli  <dodji@redhat.com>

	PR c++/42758
	PR c++/42634
	PR c++/42336
	PR c++/42797
	PR c++/42880
	* g++.dg/other/crash-5.C: New test.
	* g++.dg/other/crash-6.C: New test.
	* g++.dg/other/crash-7.C: New test.
	* g++.dg/other/crash-8.C: New test.

2010-01-29  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42889
	* gcc.dg/pr42889.c: New test.

2010-01-28  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/pr42881.c: Use SSE2.

2010-01-28  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42891
	* gcc.target/i386/pr42891.c: New test.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/42871
	* g++.dg/torture/pr42871.C: New testcase.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/Wobjsize-1.h: New testcase.
	* gcc.dg/Wobjsize-1.c: Likewise.

2010-01-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42883
	* g++.dg/torture/pr42883.C: New testcase.

2010-01-28  Michael Matz  <matz@suse.de>

	* gcc.target/i386/pr42881.c: New test.

2010-01-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.misc-tests/linkage.exp: Remove mips-sgi-irix6*o32 support.
	Add i?86-*-solaris2* support.

2010-01-28  Dodji Seketeli  <dodji@redhat.com>

	PR c++/42713
	PR c++/42820
	* g++.dg/template/typedef27.C: New test case.
	* g++.dg/template/typedef28.C: New test case.

2010-01-27  Stephen Thomas  <stephen.thomas@arm.com>

	* testsuite/gcc.dg/optimize-bswap*.c: Add ARM target

2010-01-27  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42878
	* gcc.dg/torture/pr42878-1.c: New testcase.